--- a/.github/ISSUE_TEMPLATE/bugreport.yml
+++ b/.github/ISSUE_TEMPLATE/bugreport.yml
@@ -33,7 +33,7 @@ body:
     attributes:
       label: Описание бага
       description: Опишите, что именно произошло. Что должно было произойти и что случилось на самом деле?
-      placeholder: Например: При попытке открыть сундук — вылетает из игры.
+      placeholder: "Например: При попытке открыть сундук — вылетает из игры."
     validations:
       required: true
 
