--- a/.github/ISSUE_TEMPLATE/bugreport.yml
+++ b/.github/ISSUE_TEMPLATE/bugreport.yml
@@ -1,7 +1,7 @@
 name: 🐞 Баг-репорт
 description: Сообщите о баге, с которым вы столкнулись на сервере
-title: "[BUG] Краткое описание проблемы"
-labels: [bug]
+title: "[Баг] Введите название бага"
+labels: [Баг]
 assignees: []
 
 body:
