--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -24,7 +24,7 @@ body:
     attributes:
       label: В чём суть предложения?
       description: Опишите идею — что вы хотите добавить или изменить?
-      placeholder: Например: Добавить новую механику торговли между городами...
+      placeholder: "Например: Добавить новую механику торговли между городами..."
     validations:
       required: true
 
