--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -42,7 +42,7 @@ body:
     attributes:
       label: Как это можно реализовать?
       description: Если у вас есть идеи по реализации — опишите. Это может помочь ускорить внедрение.
-      placeholder: Например: можно использовать плагин TradeManager, или написать кастомный функционал...
+      placeholder: "Например: можно использовать плагин TradeManager, или написать кастомный функционал..."
     validations:
       required: false
 
