--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: 💡 Предложение / Новая функция
 description: Предложите улучшение или новую функцию для сервера
-title: "[FEATURE] Краткое описание идеи"
-labels: [enhancement]
+title: "[FEATURE] Введите название предложения"
+labels: [Предложение]
 assignees: []
 
 body:
