--- a/.github/ISSUE_TEMPLATE/bugreport.yml
+++ b/.github/ISSUE_TEMPLATE/bugreport.yml
@@ -1,6 +1,6 @@
 name: 🐞 Баг-репорт
 description: Сообщите о баге, с которым вы столкнулись на сервере
-title: "[Баг] Введите название бага"
+title: "[Введите название бага]"
 labels: [Баг]
 assignees: []
 
