--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: 💡 Предложение / Новая функция
 description: Предложите улучшение или новую функцию для сервера
-title: "[FEATURE] Введите название предложения"
+title: "[Введите название предложения/идеи]"
 labels: [Предложение]
 assignees: []
 
